--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "body-parser": "^1.20.2",
+    "expess": "^0.0.1-security",
     "express": "^4.19.2",
     "request": "^2.88.2"
   }
