--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "nodejs",
+  "name": "facebook-bot",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6",
-    "body-parser": "^1.20.2",
-    "expess": "^0.0.1-security",
-    "express": "^4.19.2",
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0",
     "request": "^2.88.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
